# lightweight-charts-rs

./: AGENTS.md  AGENTS_AREA_TEMPLATE.md  AGENTS_CHARTVIEW.md  AGENTS_CONTEXT.md  AGENTS_DATAFEED.md  AGENTS_DATASTORE.md  AGENTS_EVENTBUS.md  AGENTS_INDICATORS.md  AGENTS_LAYOUT.md  AGENTS_RENDER.md  AGENTS_RENDER_PIPELINE.md  AGENTS_THREADING.md  AGENTS_TOOLS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: areas-modularization.md  future-proposals-backlog.md  future-proposals.md  implementation-log.md  lightweight-charts-v5.1-gap-plan.md  modular-areas-technical-proposal.md  other-libs-plan.md  pango-plan.md  ux-pro-backlog.md  ux-professional-improvements.md
examples/: README.md  basic_chart.rs  indicators.rs  line_chart.rs  realtime.rs
src/: lib.rs  main.rs  settings_ui.rs
src/app/: data_feed.rs  helpers.rs  indicator_modal.rs  interaction.rs  market_data.rs  mod.rs  panel_picker.rs  panel_settings.rs  settings_wiring.rs
src/chart/: api.rs  data.rs  format.rs  layout.rs  mod.rs  options.rs  scales.rs  ticks.rs  types.rs  util.rs
src/chart/core/: interaction.rs  mod.rs  options.rs  pricescale.rs  render.rs  render_axes.rs  render_crosshair.rs  render_helpers.rs  render_markers.rs  render_overlays.rs  scale.rs  series.rs  timescale.rs
src/icons/: mod.rs
src/indicators/: bollinger.rs  ema.rs  macd.rs  mod.rs  rsi.rs  sma.rs  stoch_rsi.rs  stochastic.rs
src/settings_ui/: helpers.rs  time_scale.rs
src/settings_ui/series/: mod.rs
src/ui/: marker_icons.rs  mod.rs
