[package]
name = "lightweight-charts-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
relm4 = { version = "0.10", default-features = true }
cairo-rs = "0.21"
time = "0.3"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2"
resvg = "0.41"
